@@ -1,0 +1,11 @@
+package net.sf.sevenzipjbinding.junit.multiplefiles;
+
+import net.sf.sevenzipjbinding.ArchiveFormat;
+
+public class ExtractMultipleFileCabTest extends ExtractMultipleFileAbstractTest {
+
+	public ExtractMultipleFileCabTest() {
+		super(ArchiveFormat.CAB, 0, 1, 1);
+	}
+
+}
