@@ -1,0 +1,11 @@
+package net.sf.sevenzipjbinding.junit.singlefile;
+
+import net.sf.sevenzipjbinding.ArchiveFormat;
+
+public class ExtractSingleFileCabTest extends ExtractSingleFileAbstractTest {
+
+	public ExtractSingleFileCabTest() {
+		super(ArchiveFormat.CAB, 0, 1, 1);
+	}
+
+}
