@@ -3,7 +3,10 @@
 
 Release - 4.65-1.01rc-extr-only (Release candidate, extraction only, cross-platform, based on zip/p7zip 4.65)
 
+	* CAB format support and tests
+
 	* Bugfix: crash, if access archive object out of a call back method
+
 
 Release - 4.65-1.0rc-extr-only (Release candidate, extraction only, cross-platform, based on zip/p7zip 4.65)
 
